# satya

./: .bumpversion.cfg  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_REDESIGN.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_IMPROVEMENTS.md  PHASE1_COMPLETE_SUMMARY.md  PHASE2_COMPLETE_SUMMARY.md  PHASE3_COMPLETE_SUMMARY.md  PHASE4_COMPLETE_SUMMARY.md  PYDANTIC_MIGRATION.md  README.md  RUST_NATIVE_EXAMPLE.md  RUST_NATIVE_V2_PROGRESS.md  SESSION_SUMMARY.md  SUMMARY.md  changelog.md  publish.sh  pyproject.toml  pytest.ini  test_json_load.py  test_literal.py  test_local.py
.github/workflows/: build-wheels.yml  release.yml  test.yml
benchmarks/: README_pipeline_benchmark.md  benchmark_data_pipeline.py  benchmark_msgspec.py  create_simple_perf_diagram.py  large_scale_map_elites.py  map_elites_optimizer.py  streaming_validation_benchmark.py
benchmarks/results/: pipeline_benchmark_results.json  streaming_benchmark_array.json  streaming_benchmark_ndjson.json  streaming_benchmark_object.json  validation_benchmark_long_results.json
dhi/: bun.lockb  jest.config.ts  package.json  tsconfig.json
dhi/benchmarks/: benchmark.ts  k6.d.ts  (+5 more)
dhi/rust/: Cargo.toml
dhi/rust/src/: lib.rs
docs/: lessons_in_deploying_maturin_builds.md
examples/: README.md  comprehensive_benchmark.py  example4.py  example_fastapi.py  example_fastapi_tests.py  json_benchmark.py  satya_comparison_graph.py  validation_benchmark.py
frontend/: bun.lockb
satya/: __init__.py
scripts/: distribution.sh
src/: lib.rs
tests/: test_basic.py  test_batch_tuning.py  test_json_bytes.py  test_models.py
(+12 files in other folders)
